- drag and drop support for calendar - contrast font color - fix sticky popover

--- a/assets/sass/calendar.scss
+++ b/assets/sass/calendar.scss
@@ -8,7 +8,7 @@
 }
 
 /* Drag and Drop events with styling */
-#external-events {
+.external-events {
     .external-event {
         vertical-align: middle;
         padding: 0 !important;
